[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/assets_itens/sprites/lua.png" type="Texture" id=1]
[ext_resource path="res://assets/assets_itens/tileset/tileset_fundo.png" type="Texture" id=2]
[ext_resource path="res://assets/assets_itens/tileset/tileset_cenario.png" type="Texture" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/inimigo.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/cristal.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/mola.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/master.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fontes/Arciform.otf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/assets_itens/sprites/cristal.png" type="Texture" id=10]
[ext_resource path="res://scripts/hud.gd" type="Script" id=13]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 510, 432, 335, 426, 306, 344, 288, 128, 512, 128, 512, 128 )

[sub_resource type="ConcavePolygonShape2D" id=7]
segments = PoolVector2Array( 512, 384, 512, 384, 512, 384, 512, 384, 512, 384, 512, 128, 512, 128, 512, 128, 512, 128, 512, 128, 512, 128, 512, 128, 512, 128, 512, 384 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 128, 512, 128, 512, 512, 0, 512 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 128, 0, 128, 222.256, 129.968, 206.704, 345.968, 173.872, 428.912, 0, 437.552 )

[sub_resource type="TileSet" id=4]
0/name = "tileset_cenario.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 512 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset_cenario.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 512, 0, 512, 512 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileset_cenario.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 1024, 0, 512, 512 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tileset_cenario.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1536, 0, 512, 512 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tileset_cenario.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 2048, 0, 512, 512 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tileset_cenario.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 2560, 0, 512, 512 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = -1
6/name = "tileset_cenario.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 3072, 0, 512, 512 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = -1

[sub_resource type="TileSet" id=5]
0/name = "tileset_cenario.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 2560, 0, 512, 512 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = -1
1/name = "tileset_cenario.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 3072, 0, 512, 512 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = -1

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 29.625, 288.25 )

[sub_resource type="DynamicFont" id=9]
size = 36
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 3.25, 472.5 )

[node name="fase1" type="Node2D"]

[node name="parallax" type="ParallaxBackground" parent="."]

[node name="layer4" type="ParallaxLayer" parent="parallax"]
motion_scale = Vector2( 0.25, 1 )

[node name="sprite" type="Sprite" parent="parallax/layer4"]
position = Vector2( 0, -220 )
texture = ExtResource( 1 )
centered = false

[node name="layer3" type="ParallaxLayer" parent="parallax"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1536, 0 )

[node name="sprite" type="Sprite" parent="parallax/layer3"]
position = Vector2( 0, -180 )
texture = ExtResource( 2 )
centered = false
hframes = 3

[node name="layer2" type="ParallaxLayer" parent="parallax"]
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 1536, 0 )

[node name="sprite" type="Sprite" parent="parallax/layer2"]
position = Vector2( 0, -250 )
texture = ExtResource( 2 )
centered = false
hframes = 3
frame = 1

[node name="layer1" type="ParallaxLayer" parent="parallax"]
motion_mirroring = Vector2( 1536, 0 )

[node name="sprite" type="Sprite" parent="parallax/layer1"]
position = Vector2( 0, -300 )
texture = ExtResource( 2 )
centered = false
hframes = 3
frame = 2

[node name="tilemap" type="TileMap" parent="."]
scale = Vector2( 0.7, 0.7 )
tile_set = SubResource( 4 )
cell_size = Vector2( 512, 128 )
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( -589800, 3, 0, -589799, 4, 0, -589798, 4, 0, -589797, 4, 0, -589796, 4, 0, -589795, 4, 0, -589794, 4, 0, -589793, 4, 0, -589792, 4, 0, -524263, 4, 0, -524262, 4, 0, -524261, 4, 0, -524260, 4, 0, -524259, 4, 0, -524258, 4, 0, -524257, 4, 0, -524256, 4, 0, -393192, 3, 0, -393191, 4, 0, -393190, 4, 0, -393189, 4, 0, -393188, 4, 0, -393187, 4, 0, -393186, 4, 0, -393185, 4, 0, -393184, 4, 0, -327648, 4, 0, -262113, 3, 0, -196576, 4, 0, -131040, 4, 0, -65505, 3, 0, 32, 4, 0, 65568, 4, 0, 131103, 3, 0, 196608, 0, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 2, 0, 196625, 0, 0, 196626, 1, 0, 196627, 1, 0, 196628, 2, 0, 196640, 4, 0, 262158, 0, 0, 262159, 1, 0, 262160, 2, 0, 262168, 0, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 1, 0, 262176, 2, 0, 327701, 0, 0, 327702, 1, 0, 327703, 2, 0 )

[node name="tilemap_background" type="TileMap" parent="."]
scale = Vector2( 0.7, 0.7 )
tile_set = SubResource( 5 )
cell_size = Vector2( 512, 128 )
format = 1
tile_data = PoolIntArray( 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 438, 267 )

[node name="pos_inicial" type="Position2D" parent="."]
position = Vector2( 253, 319 )

[node name="pos_final" type="Position2D" parent="."]
position = Vector2( 11137, 334 )

[node name="limit_left" type="Area2D" parent="."]
position = Vector2( 9563, 201 )

[node name="shape" type="CollisionShape2D" parent="limit_left"]
shape = SubResource( 8 )

[node name="inimigo" parent="." instance=ExtResource( 5 )]
position = Vector2( 1189, 238 )
dir = 1

[node name="inimigo2" parent="." instance=ExtResource( 5 )]
position = Vector2( 2664, 221 )
dir = 1

[node name="inimigo3" parent="." instance=ExtResource( 5 )]
position = Vector2( 3854, 223 )

[node name="inimigo4" parent="." instance=ExtResource( 5 )]
position = Vector2( 5584, 327 )

[node name="inimigo5" parent="." instance=ExtResource( 5 )]
position = Vector2( 7153, 242 )

[node name="inimigo6" parent="." instance=ExtResource( 5 )]
position = Vector2( 7934, 413 )

[node name="cristais" type="Node2D" parent="."]

[node name="cristal" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 666, 221 )

[node name="cristal2" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 718, 152 )

[node name="cristal3" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 783, 102 )

[node name="cristal4" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 1405, 267 )

[node name="cristal5" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 3444, 109 )

[node name="cristal6" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 2488, 233 )

[node name="cristal7" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 2486, 155 )

[node name="cristal8" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 2488, 78 )

[node name="cristal10" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 4200, 190 )

[node name="cristal11" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 4200, 112 )

[node name="cristal12" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 4201, -214 )

[node name="cristal13" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 4163, -271 )

[node name="cristal14" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 4203, -324 )

[node name="cristal15" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 4243, -274 )

[node name="cristal16" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 4194, 25 )

[node name="cristal9" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 1502, 270 )

[node name="cristal17" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 1614, 270 )

[node name="cristal18" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 3112, 273 )

[node name="cristal19" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 3212, 200 )

[node name="cristal20" parent="cristais" instance=ExtResource( 6 )]
position = Vector2( 3326, 139 )

[node name="mola" parent="." instance=ExtResource( 7 )]
position = Vector2( 4202, 325 )

[node name="master" parent="." instance=ExtResource( 8 )]
position = Vector2( 11078, 167 )

[node name="limite_master" type="Node2D" parent="."]

[node name="left" type="Position2D" parent="limite_master"]
position = Vector2( 8959, 376 )

[node name="right" type="Position2D" parent="limite_master"]
position = Vector2( 11078, 377 )

[node name="hud" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="txt_vidas" type="Label" parent="hud"]
margin_left = 27.0
margin_top = 18.0
margin_right = 67.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 9 )
text = "x 3"

[node name="txt_pontos" type="Label" parent="hud"]
margin_left = 73.0
margin_top = 78.0
margin_right = 234.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="img_pontos" type="TextureRect" parent="hud"]
margin_left = 9.0
margin_top = 58.0
margin_right = 137.0
margin_bottom = 186.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="hbox_fundo" type="HBoxContainer" parent="hud"]
margin_left = 92.0
margin_top = 15.0
margin_right = 748.0
margin_bottom = 143.0
rect_scale = Vector2( 0.3, 0.3 )
custom_constants/separation = 20

[node name="hbox_frente" type="HBoxContainer" parent="hud"]
margin_left = 92.0
margin_top = 15.0
margin_right = 748.0
margin_bottom = 143.0
rect_scale = Vector2( 0.3, 0.3 )
custom_constants/separation = 20

[node name="hbox_fundo_master" type="HBoxContainer" parent="hud"]
margin_left = 990.0
margin_top = 570.0
margin_right = 1125.0
margin_bottom = 698.0
rect_scale = Vector2( 0.2, 0.2 )
custom_constants/separation = -280

[node name="hbox_frente_master" type="HBoxContainer" parent="hud"]
modulate = Color( 0, 0.345098, 1, 1 )
margin_left = 990.0
margin_top = 570.0
margin_right = 1125.0
margin_bottom = 698.0
rect_scale = Vector2( 0.2, 0.2 )
custom_constants/separation = -280

[node name="parede_esquerda" type="StaticBody2D" parent="."]
position = Vector2( 8414, 224 )
collision_layer = 4096
collision_mask = 0

[node name="shape" type="CollisionShape2D" parent="parede_esquerda"]
shape = SubResource( 10 )
disabled = true

[node name="limite_inferior" type="Position2D" parent="."]
position = Vector2( 504, 900 )

[connection signal="body_entered" from="limit_left" to="player" method="_on_limit_left_body_entered"]
